--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <div id='map'></div>
     <script>
-    mapboxgl.accessToken = 'pk.eyJ1IjoiamluYWxmb2ZsaWEiLCJhIjoiOE53X2toRSJ9.2aMeuYERrEvKHul16lAJjA'; // replace this with your access token
+    mapboxgl.accessToken = 'pk.eyJ1IjoiamluYWxmb2ZsaWEiLCJhIjoiY2s4OXRod2NzMDMwMDNnbGxxMjVuMHk1biJ9.7O1480XqZatxkUK8eP1dGQ'; // replace this with your access token
     var map = new mapboxgl.Map({
       container: 'map',
       style: 'mapbox://styles/jinalfoflia/cjkpzhg1f73f82roga99lrvy5', // replace this with your style URL
